--- a/ShapesApp/ShapesApp.csproj
+++ b/ShapesApp/ShapesApp.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Circle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IShape.cs" />
+    <Compile Include="Rectangle.cs" />
     <Compile Include="Triangle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
